--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v8=qAJ44G5Bm7">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
 	  <!--
-      manifest.json provides metadata used when your web app is installed on a
+      manifest.json provides metadata used when your web app is installed onjfdlsajlkdaskfjdlsaa a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
