pushing before deploy

--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <title>Nikhil Badveli Portfolio</title>
+    <meta name="title" content="Nikhil Badveli Portfolio">
+    <meta name="description" content="My personal website that showcases all the work I've done and the knowledge I've acquired so far in my experimental tech journey.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:url" content="https://nikhilbadveli.github.io/MyPortfolioWebsite/">
+    <meta property="og:title" content="Nikhil Badveli Portfolio">
+    <meta property="og:description" content="My personal website that showcases all the work I've done and the knowledge I've acquired so far in my experimental tech journey.">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://developerfolio.js.org/">
-    <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="twitter:url" content="https://nikhilbadveli.github.io/MyPortfolioWebsite/">
+    <meta property="twitter:title" content="Nikhil Badveli Portfolio">
+    <meta property="twitter:description" content="My personal website that showcases all the work I've done and the knowledge I've acquired so far in my experimental tech journey.">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
@@ -35,7 +35,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v8=qAJ44G5Bm7">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
 	  <!--
-      manifest.json provides metadata used when your web app is installed onjfdlsajlkdaskfjdlsaa a
+      manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
